[tool.poetry]
name = "train-model"
version = "0.1.0"
description = ""
authors = ["bodrovis <bodrovis@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12"
requests = "^2.31"
lxml = "^5.1"
scrapingbee = "^2.0"
black = "^24.4.2"
pandas = "^2.2.2"
tenacity= "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
